// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic logging 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {},
    "level": 2,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`basic logging with context and payload 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "cool": true,
      "country": "uk",
      "foo": "baz",
    },
    "level": 2,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`basic logging with payload 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "foo": "bar",
    },
    "level": 2,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`child logger with context and payload 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "cool": true,
      "foo": "baz",
      "hello": "world",
      "meh": true,
    },
    "level": 2,
    "logger": "testing:testchild",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`provides sugar api for debug 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "cool": true,
      "foo": "baz",
    },
    "level": 3,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`provides sugar api for error 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "cool": true,
      "foo": "baz",
    },
    "level": 0,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`provides sugar api for info 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "cool": true,
      "foo": "baz",
    },
    "level": 2,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`provides sugar api for warning 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "cool": true,
      "foo": "baz",
    },
    "level": 1,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`respects serializable errors 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "error": Object {
        "name": "serializable error",
        "stack": "nothing to report",
      },
    },
    "level": 2,
    "logger": "testing",
    "msg": "fail whale",
    "time": 1514764800000,
  },
]
`;

exports[`serialized basic errors 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "error": Object {
        "message": "oops",
        "name": "Error",
        "stack": "Error: oops
    at Object.<anonymous> (/Users/georgeshaider/Work/oss/logbang/logbang/src/logger.test.ts:48:49)
    at Object.asyncFn (/Users/georgeshaider/Work/oss/logbang/logbang/node_modules/jest-jasmine2/build/jasmine_async.js:124:345)
    at resolve (/Users/georgeshaider/Work/oss/logbang/logbang/node_modules/jest-jasmine2/build/queue_runner.js:51:12)
    at new Promise (<anonymous>)
    at mapper (/Users/georgeshaider/Work/oss/logbang/logbang/node_modules/jest-jasmine2/build/queue_runner.js:40:274)
    at promise.then (/Users/georgeshaider/Work/oss/logbang/logbang/node_modules/jest-jasmine2/build/queue_runner.js:83:39)
    at <anonymous>
    at process._tickCallback (internal/process/next_tick.js:188:7)",
      },
    },
    "level": 2,
    "logger": "testing",
    "msg": "fail whale",
    "time": 1514764800000,
  },
]
`;
